--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Resposivee Fullscreen Navigation</title>
+	<title>Resposivee Fullscreeen Navigation</title>
 	<link rel="stylesheet" href="app-css/index.css">
 </head>
 
